--- a/src/main/frontend/src/public/index.html
+++ b/src/main/frontend/src/public/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>RBlog</title>
+    <title>RBlog: the RManniBucau v2 Blog</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="RBlog: Romain Manni-Bucau Blog"/>
-    <meta name="keywords" content="java, javaee, blog, rmannibucau, tomee, openejb"/>
+    <meta name="description" content="RBlog: Romain Manni-Bucau Blog about Java, JavaEE, TomEE, Angular, Open Source, Code and geeky topics..."/>
+    <meta name="keywords" content="java, javaee, blog, rmannibucau, tomee, openejb, angular, web"/>
     <meta name="theme-color" content="#303030">
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
